2001-08-16  Keith Seitz  <keiths@redhat.com>

	* cpp_variable.test (2.29, 2.30, 2.43, 2.63, 2.72): Char
	pointers can now be dereferenced. Update test to reflect
	this change in varobj.
	* c_variable.test (4.9, 4.10, 4.47, 4.48, 5.1, 5.2, 5.3,
	5.4, 5.5, 5.6, 5.7, 5.8, 5.9, 5.17, 5.18, 5.43, 5.44, 5.47,
	5.48, 5.49, 5.50, 5.51, 5.53, 6.30): Likewise.

2001-08-13  Jeff Holcomb  <jeffh@redhat.com>

	* cpp_variable.test: Use gdbtk_test_run to start the test
	program.

2001-05-07  Keith Seitz  <keiths@cygnus.com>

	* README: New file.

        * configure.in: Check for executable filename extension.
	* Makefile.in: Add filename extensions.
        * configure: Regenerated.

        * defs: Fix typo setting _test(verbose).
        (gdbtk_test_file): New proc to load executables into gdbtk.
        (gdbtk_test_run): New proc to run executables on gdbtk.
        * browser.exp: Don't check if DISPLAY is set: let
        gdbtk_initialize_display do it all for us.
        Call gdbtk_done when finished with tests.
        * c_variable.exp: Ditto.
        * console.exp: Ditto.
        * cpp_variable.exp: Ditto.
        Only run tests if c++ is supported in the configuration.
        * srcwin.exp: Ditto the DISPLAY stuff.
        Accumulate all test results for the end and report them then.

        * browser.test: Use gdbtk_test_file and gdbtk_test_run
        to load and run an executable.
        * c_variable.test: Use gdbtk_test_file and gdbtk_test_run
        to load and run an executable.
        * srcwin.test: Ditto.
        * srcwin1.test: Ditto.
        * srcwin2.test: Ditto.

        * browser.test: (set_search_mode): Use "configure
        -value" not "entryset" to set the combobox's value. We need
        to have the command fired.
        (browser-3.5): Remove trailing whitespace which causes test to
        fail.
        (browser-4.4): Expect something rational. Regexp "\_1$" cannot
        match "func_10"!
        (browser-4.5): Ditto.