@@ -10,6 +10,8 @@
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU General Public License for more details.
 
+load_lib insight-support.exp
+
 if {[gdbtk_initialize_display]} {
   if {$tracelevel} {
     strace $tracelevel
